--- a/leads.html
+++ b/leads.html
@@ -212,12 +212,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseTwo">
                       <div class="card-header" id="headingTwo">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                             <img src="img/prof3.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                             Larry Parry
                           </a>
                         </div>
@@ -237,12 +237,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseThree">
                       <div class="card-header" id="headingThree">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                             <img src="img/prof2.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                             Diana Maina
                           </a>
                         </div>
@@ -262,12 +262,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseFour">
                       <div class="card-header" id="headingFour">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                             <img src="img/prof4.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                             Tina Lena
                           </a>
                         </div>
@@ -287,12 +287,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseFive">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                             Mark Dark
                           </a>
                         </div>
@@ -313,12 +313,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseSix">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                             Mark Dark
                           </a>
                         </div>
@@ -339,12 +339,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseSeven">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
                             Mark Dark
                           </a>
                         </div>
@@ -365,12 +365,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseEight">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="true" aria-controls="collapseEight">
                             Mark Dark
                           </a>
                         </div>
@@ -391,12 +391,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseNine">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
                             Mark Dark
                           </a>
                         </div>
@@ -417,12 +417,12 @@
                     <div class="card shadow card-margin" style="border-radius: 15px;" type="button" data-toggle="collapse" data-target="#collapseTen">
                       <div class="card-header" id="headingOne">
                         <div class="lead-card-heading-img">
-                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
                             <img src="img/prof1.jpg" alt="prof1.jpg">
                           </a>
                         </div> 
                         <div class="lead-card-heading-name">
-                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <a class="btn btn-link card-lead-name-margin" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
                             Mark Dark
                           </a>
                         </div>
