--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                   
                   <!-- Use any element to open the sidenav -->
-                  <div id="nav-button" class="open-nav-btn" style="flex:1;"><span onclick="openNav()"><i style="color: #007bff;" class="fas fa-bars"></i></span></div>
+                  <div id="nav-button" class="open-nav-btn"><span onclick="openNav()"><i style="color: #007bff;" class="fas fa-bars"></i></span></div>
                 </div>
                 <div class="nav-mid"> 
                     <div class="sub-nav nav-mid-child">
